Implemented Base64-Parameter
